--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "lodash": "^4.17.4",
+    "rc-color-picker": "^1.2.3",
     "rc-slider": "^8.3.5",
     "react": "^16.0.0",
-    "react-color": "^2.13.8",
+    "react-dnd": "^2.5.4",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
