--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mars/heroku-js-runtime-env": "^3.0.2",
     "lodash": "^4.17.4",
     "rc-color-picker": "^1.2.3",
     "rc-slider": "^8.3.5",
